--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
     background-color: #F1ECC3;
     margin: 20vh auto;
     padding-top: 1.2rem;
-    padding-bottom: 1.2rem;
+    padding-bottom: 0rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,17 +38,31 @@ html {
 .main-container h1 {
     text-align: center;
     letter-spacing: 1px;
-    margin-bottom: 20%;
     font-size: 36px;
     font-weight: 700;
+}
+
+.main-container h2 {
+    margin-bottom: 14%;
+}
+
+.quiz-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fa-angle-double-down {
+    margin-bottom: .2rem;
+    animation: load-down 1s linear infinite;
 }
 
 button {
     margin: .6rem auto;
     padding-top: .1rem;
     padding-bottom: .1rem;
-    width: 70%;
-    height: 8vh;
+    width: 50%;
+    height: 10vh;
     font-weight: 500;
     font-size: 20px;
     border-radius: 10px;
@@ -66,7 +80,7 @@ button:hover {
 #packs {
     display: flex;
     flex-direction: column;
-    margin-bottom: 5vh;
+    margin-bottom: 6vh;
     justify-content: center;
     align-items: center;
 }
@@ -96,4 +110,19 @@ button:hover {
 .hidden {
     display: none;
     visibility: hidden;
+}
+
+@keyframes load-down {
+    0% {
+        opacity: 60%;
+        color: red;
+    }
+    50% {
+        opacity: 80%;
+        transform: translateY(.04rem);
+    }
+    100% {
+        opacity: 100%;
+        transform: translateY(.06rem);
+    }
 }
