--- a/score.css
+++ b/score.css
@@ -15,6 +15,7 @@ html {
     background-color: #F1ECC3;
     margin: 20vh auto;
     padding: 1.2rem;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -75,4 +76,10 @@ button:hover {
     cursor: pointer;
     transform: translateY(-.1rem);
     transition: .2s;
+}
+
+@media only screen and (max-width: 800px) {
+    .score-container {
+        height: 42vh;
+    }
 }
